<resources>
    <string name="app_name">Banja Luka WiFi</string>
    <string name="title_home">Početna</string>
    <string name="title_map">WiFi Mapa</string>
    <string name="title_add_edit_network">Dodaj / Uredi mrežu</string>
    <string name="please_wait">Molimo sačekajte</string>
    <string name="search_networks">Pretražite mreže</string>
    <string name="prompt_network_name">Ime mreže *</string>
    <string name="prompt_network_address">Adresa</string>
    <string name="prompt_network_password">Šira *</string>
    <string name="save">Sačuvaj</string>
    <string name="important_fields">Polja označena sa * su obavezna</string>
    <string name="new_network_notice">Nije poželjno da se unose šifre od privatnih mreža kao što su kuće ili kancelarije.</string>
    <string name="password_copied_success">Šifra uspješno kopirana</string>
    <string name="field_required">Ovo polje je obavezno</string>
    <string name="waiting_for_location">Pričekajte dok pronađemo vašu lokaciju</string>
    <string name="permission_need_to_work">Ta dozvola je potrebna za rad aplikacije</string>
    <string name="network_saved_success">Mreža uspješno sačuvana. Mreža će se pojaviti u aplikaciji, nakon što bude odobrena od strane administratora.</string>
    <string name="network_saved_error">Došlo je do greške prilikom čuvanja mreže. Molimo probajte kasnije.</string>
    <string name="internet_required">Internet konekcija je potrebna</string>
    <string name="wifi_internet_required">WiFi internet konekcija je potrebna</string>
    <string name="report_bug">Prijavite grešku</string>
    <string name="terms_and_conditions"><![CDATA[<p>1. Banja Luka WiFi je android aplikacija koja sadrži šifre wifi mreža unutar grada Banja Luka.\n\n <p>2. Aplikacija je namjenjena samo za navedeni grad.</p> <p>3. Autor aplikacije ne snosi nikakvu odgovornost za mreže koje korisnici dodaju u aplikaciju.\n\n <p>4. Sve mreže koje su korisnici dodali su dodane na njihovu odgovornost i oni potvrđuju da dodana mreža ne pripada poslovnim i/ili privatnim stambenim objektima.</p> <p>5. Ako neko želi da se njegova mreža ukloni može kontaktirati administratora putem email adrese <a href=\'mailto:igor@igorilic.net\'>igor@igorilic.net</a>.</p> <p>6. Nakon potvrde da mreža stvarno pripada toj osobi, mreža će biti uklonjena.</p> <p>7. Uklanjanje mreže se ne može desiti prije izlaska nove verzije aplikacije.</p> <p>8. Podaci koje aplikacija uzima od korisnika su geografska lokacija i njihov jedinstveni ID uređaja.</p> <p>9. Aplikacija je besplatna, ali se na početnoj strani nalaze oglasi.</p> <p>10. Autor aplikacije može da promijeni uslove iz bilo kog razloga bez prethodnog ili naknadnog obavještenja korisnika.</p>]]></string>
    <string name="about_app">O aplikaciji</string>
    <string name="lblAuthor">Autor</string>
    <string name="email">E-mail</string>
    <string name="lblWebsite">Webstranica</string>
    <string name="lblVersion">Verzija</string>
    <string name="author_name">Igor Ilić</string>
    <string name="author_email">igor@igorilic.net</string>
    <string name="author_website">https://igorilic.net</string>
    <string name="app_version" translatable="false">3.0</string>
    <string name="report_name">Vaše ime *</string>
    <string name="report_email">Vaš e-mail</string>
    <string name="report_error_text">Greška *</string>
    <string name="submit_error">Prijavite  grešku</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bug_reported_success">Greška uspješno prijavljena</string>
    <string name="bug_reported_error">Došlo je do greške prilikom prijavljivanja greške.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7166119252755550/6897013025</string>
    <string name="terms_of_use">Uslovi korištenja</string>
    <string name="accept_terms">Prihvatam uslove</string>
    <string name="app_needs_permissions_to_run">Aplikaciji su potrebna sva prava kako bi radila ispravno</string>
    <string name="double_back_to_exit">Pritisnite Nazad x2 da bi ste izašli</string>
    <string name="there_was_an_error">Došlo je do greške</string>
    <string name="timeout_error">-1 | Nema odgovora od servera</string>
    <string name="warning">Upozorenje</string>
    <string name="ok">OK</string>
    <string name="confirm_quit_app">Potvrdite izlazak iz aplikacije</string>
    <string name="confirm_quit_app_message">Da li ste sigurni da želite da izađete iz aplikacije?</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="error_loading_networks">Došlo je do greške prilikom učitavanja mreža</string>
    <string name="needs_wifi_connection_to_submit">Potrebna je WiFi konekcija da bi mogli da dodate/uredite mrežu</string>
    <string name="networks_updating">Ažuriramo mreže. Molimo pričekajte.</string>
    <string name="location_required_to_run">Aplikaciji je potreban pristup lokaciji kako bi mogla da radi.</string>
    <string name="no_network_response">-2 | Greška prilikom komunikacije sa serverom</string>
    <string name="notice">Obavještenje</string>
    <string name="title_report_bug">Prijavite grešku</string>
    <string name="confirm_network_info_is_valid">Potvrdite da su podaci za mrežu i dalje ispravni</string>
    <string name="confirm_network_info_is_outdated">Prijavite da su podaci neispravni</string>
    <string name="lbl_last_update">Zadnja promjena: %1$s</string>
    <string name="password_copied_error">Nije moguće kopirati šifru</string>
</resources>
