<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_edit"
        android:title="@string/title_add_edit_network" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_bug"
        android:title="@string/report_bug"
        android:icon="@drawable/ic_bug_report" />

    <item
        android:id="@+id/navigation_about"
        android:title="@string/about_app"
        android:icon="@drawable/ic_about" />
</menu>
