<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ReportBugFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/lblBugAuthorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtBugAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/lblBugAuthorEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblBugAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtBugAuthorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/lblBugDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblBugAuthorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtBugDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report_error_text"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/report_bug"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBugDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>